--- a/app/src/main/res/layout/activity_java_language.xml
+++ b/app/src/main/res/layout/activity_java_language.xml
@@ -309,7 +309,7 @@
         android:id="@+id/imageView"
         android:layout_width="86dp"
         android:layout_height="154dp"
-        android:src="@drawable/sample_codey"
+        android:src="@drawable/codey_main"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
         app:layout_constraintHorizontal_bias="0.094"
@@ -321,7 +321,10 @@
         android:id="@+id/textView15"
         android:layout_width="183dp"
         android:layout_height="116dp"
-        android:text="@string/hi_welcome_to_java_language_you_may_choose_what_lesson_you_want_to_learn"
+        android:fontFamily="@font/lionel"
+        android:textColor="#000000"
+        android:text="Click a lesson that you want to begin and I will guide you throughout this study!"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView"
