--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,41 +8,59 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="80dp"
-        android:layout_height="192dp"
-        android:layout_marginTop="12dp"
+        android:layout_width="60dp"
+        android:layout_height="127dp"
+        android:layout_marginTop="16dp"
         android:contentDescription="@string/codey_image"
-        android:src="@drawable/sample_codey"
+        android:src="@drawable/codey_main"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.048"
+        app:layout_constraintHorizontal_bias="0.045"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="60dp"
+        android:layout_height="127dp"
+        android:contentDescription="@string/codey_image"
+        android:src="@drawable/codey_main"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.045"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
     <TextView
         android:id="@+id/textView"
-        android:layout_width="230dp"
-        android:layout_height="173dp"
-        android:layout_marginStart="8dp"
-        android:text="Hi! I'm Codey, and I'm your personal virtual assistant. I'll be guiding you throughout the lessons. Please choose what programming languages you wish to learn."
-        android:textSize="16sp"
+        android:layout_width="264dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/callout_background"
+        android:fontFamily="@font/lionel"
+        android:text="@string/welcome_to_care_i_m_codey_your_virtual_assistant_app_guide"
+        android:textColor="#000000"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.031"
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.526"
+        app:layout_constraintVertical_bias="0.529"
         tools:ignore="TextSizeCheck" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="161dp"
-        android:layout_height="64dp"
-        android:layout_marginTop="4dp"
-        android:text="Programming Languages"
+        android:layout_width="264dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/callout_background"
+        android:fontFamily="@font/lionel"
+        android:text="@string/to_continue_kindly_choose_your_desired_programming_language_that_you_want_to_learn_and_let_s_get_started"
+        android:textColor="#000000"
         android:textSize="20sp"
-        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.184"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/imageView5"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.346"
         tools:ignore="TextSizeCheck" />
 
     <ImageButton
@@ -61,7 +79,7 @@
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.06"
         app:srcCompat="@drawable/java_icon" />
 
     <ImageButton
