--- a/app/src/main/res/layout/activity_java_syntax.xml
+++ b/app/src/main/res/layout/activity_java_syntax.xml
@@ -12,14 +12,13 @@
         android:layout_height="wrap_content"
         tools:context=".JavaLessonsActivity.JavaSyntax">
 
-
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             android:fontFamily="@font/font"
-            android:text="@string/introductions"
+            android:text="Syntax"
             android:textAllCaps="true"
             android:textColor="#000000"
             android:textSize="24sp"
@@ -224,10 +223,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="12dp"
+            android:background="@drawable/callout_background"
             android:fontFamily="@font/lionel"
             android:text="@string/firstjavaprogram"
             android:textColor="#000000"
-            android:background="@drawable/callout_background"
             app:layout_constraintEnd_toStartOf="@+id/guideline7"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView9" />
